# PetitPotam

./: .gitignore  PetitPotam.py  PetitPotam.sln  Petitpotam.py  README.md
PetitPotam/: PetitPotam.cpp  PetitPotam.vcxproj  PetitPotam.vcxproj.filters  ms-dtyp.h  ms-dtyp_h.h  ms-efsrpc_c.c  ms-efsrpc_h.h
python/: pyproject.toml
