[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PetitPotam"
version = "1.0.0"
authors = [
    { name = "GILLES Lionel aka topotam (@topotam77)" },
]
description="PoC to elicit machine account authentication via some MS-EFSRPC functions"
readme = "README.md"
classifiers=[
    "Programming Language :: Python :: 3",
]
dependencies = [
    "impacket >= 0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/topotam/PetitPotam"

[project.scripts]
"PetitPotam" = "PetitPotam:main"
